# alexflipnote.py

./: .gitignore  README.md  changelog.md  client.py  docs.md  http.py  pyproject.toml  setup.py  start-docs.md  test_api.py
.github/workflows/: python-publish.yml
alexflipnote/: __init__.py  cache.py  classes.py  client.py  colour.py  enums.py  errors.py  http.py  utils.py
alexflipnote/_types/: colour.py  http.py  http_endpoint.py  nft.py  sillycat.py
alexflipnote/models/: __init__.py  colour.py  http.py  image.py  nft.py  sillycat.py
alexflipnote_api/: __init__.py  client.py  colour.py  steam.py
docs/: enums.md  methods.md
docs/models/: colour.md  httpresult.md  image.md  nft.md  sillycat.md
